# consultcontabil

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  COMANDOS_TESTE.md  CORREÇÕES_OBRIGACOES_LICENCAS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json   update Marco 7 partial documentation
apps/api/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  package.json  pyproject.toml  pytest.ini  reset_admin_password.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251030_0834_04a0044a7091_initial_auth_tables_users_and_audit_logs.py  20251030_1210_f774110e9d18_add_clients_table_with_enums.py  20251030_1243_ef0dc6706660_add_obligations_and_notifications.py  20251030_1841_1c5611d9c74d_add_financial_transactions_table.py  20251030_2330_add_licenses_tables.py  20251031_1053_d8351443dd86_add_reports_tables.py  20251106_1958_d3365fae53fd_add_client_extended_fields.py  20251106_2003_b44519518af8_create_obligations_templates_table.py  20251106_2004_e36a219511ce_create_client_drafts_table.py  20251107_1033_7aff3ebd7a1f_change_client_status_default_to_ativo.py  20251111_1046_f329c1a83bf3_add_client_users_relationship_table.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/db/: session.py
apps/api/app/patterns/: __init__.py
apps/api/docs/: API-USERS-REFERENCE.md  FASE-1-BACKEND-COMPLETO.md
apps/api/scripts/: seed_all.py  seed_clients.py  seed_licenses.py  seed_obligation_types.py  seed_obligation_types_sql.py  seed_obligations.py  seed_report_templates.py  seed_users.py
apps/api/tests/: conftest.py  test_health.py
docs/: PRD.md  (+9 more)
(+233 files in other folders)
